package tokens

type Audience string

const (
	Audience_SymmetricalSpoon Audience = "symmetrical-spoon"
)
